<resources>
    <string name="app_name">Tasty Recipes</string>
    <string name="username_description">Usuario</string>
    <string name="password_description">Contraseña</string>
    <string name="login_text">Ingresar</string>
    <string name="register_text">Registrar</string>
    <string name="natural_name_description">Nombre completo</string>
    <string name="email_decription">Email</string>
    <string name="save_text">Guardar</string>
    <string name="ingredient_register">Registar ingrediente</string>
    <string name="recipe_register_text">Registar receta</string>
    <string name="add_text">Agregar</string>
    <string name="show_recipes">Ver recetas</string>
    <string name="ingredient_description">Ingrediente</string>
    <string name="recipe_text">Nombre</string>
</resources>